--- a/tests/test.in
+++ b/tests/test.in
@@ -1,3 +1,5 @@
 ann = 1 + 77; kn = 10 - 4;
-a100_ = 104 - 3;
-b_1 = 5;
+a100_ = 104 - 3 / 2;
+b_1 = 3 + 4 + 8 - 5 * 31;
+
+mul_mul = 7 * 6 * 5 * 4 + 3 + 2 - 1 * 7 * 6 * 5;
