--- a/tests/test.in
+++ b/tests/test.in
@@ -3,3 +3,6 @@ a100_ = 104 - 3 / 2;
 b_1 = 3 + 4 + 8 - 5 * 31;
 
 mul_mul = 7 * 6 * 5 * 4 + 3 + 2 - 1 * 7 * 6 * 5;
+
+gt1 = 5 + 4 == 8;
+ttt = 5 + 4 <= 8 < 9 / 3 - 1 * 2 == 4;
