add print & scope & smarter variables

--- a/tests/test.in
+++ b/tests/test.in
@@ -1,8 +1,20 @@
 ann = 1 + 77; kn = 10 - 4;
 a100_ = 104 - 3 / 2;
+print kn;
 b_1 = 3 + 4 + 8 - 5 * 31;
 
 mul_mul = 7 * 6 * 5 * 4 + 3 + 2 - 1 * 7 * 6 * 5;
 
-gt1 = 5 + 4 == 8;
-ttt = 5 + 4 <= 8 < 9 / 3 - 1 * 2 == 4;
+gt1 = 5 + 4 == 8;;;;
+ttt = 5 + 4 <= 8;
+
+print ann;
+print ttt;
+;
+
+print 88 * 2 - 3;
+
+print b_1;
+
+abc = 5 > 3;
+print abc;
