--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,3 +28,9 @@ target_include_directories(paracl PUBLIC ${INCLUDE_DIR})
 target_include_directories(paracl PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 
 target_compile_features(paracl PRIVATE cxx_std_20)
+
+set(PYTHON_SCRIPT_RUN "${CMAKE_CURRENT_SOURCE_DIR}/../tests/end_to_end/run_tests.py")
+add_test(
+    NAME end_to_end_paracl_target
+    COMMAND bash -c "python3 ${PYTHON_SCRIPT_RUN}"
+)
