--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.11)
 project(unit)
 
-include_directories(${gtest_SOURCE_DIR})
+find_package(GTest REQUIRED)
 
 add_executable(unit_paracl paracl_unit_tests.cpp)
-target_link_libraries(unit_paracl gtest gtest_main)
+target_link_libraries(unit_paracl GTest::GTest GTest::Main)
 
 set(RUN_TESTS ./unit_paracl --gtest_color=yes)
 add_test(
