--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,8 @@ project(src)
 
 set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
-find_package(bison REQUIRED)
-find_package(flex  REQUIRED)
+find_package(BISON REQUIRED)
+find_package(FLEX  REQUIRED)
 
 flex_target(lexer
     lexer.l
