--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,8 +29,15 @@ target_include_directories(paracl PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 
 target_compile_features(paracl PRIVATE cxx_std_20)
 
-set(PYTHON_SCRIPT_RUN "${CMAKE_CURRENT_SOURCE_DIR}/../tests/end_to_end/run_tests.py")
+set(PYTHON_SCRIPT_RUN_VALID "${CMAKE_CURRENT_SOURCE_DIR}/../tests/end_to_end/run_valid_tests.py")
+set(PYTHON_SCRIPT_RUN_ERROR "${CMAKE_CURRENT_SOURCE_DIR}/../tests/end_to_end/run_error_tests.py")
+
 add_test(
-    NAME end_to_end_paracl_target
-    COMMAND bash -c "python3 ${PYTHON_SCRIPT_RUN}"
+    NAME end_to_end_valid_paracl_target
+    COMMAND bash -c "python3 ${PYTHON_SCRIPT_RUN_VALID}"
+)
+
+add_test(
+    NAME end_to_end_error_paracl_target
+    COMMAND bash -c "python3 ${PYTHON_SCRIPT_RUN_ERROR}"
 )
