--- a/tests/end_to_end/tests_valid_in/test_024.in
+++ b/tests/end_to_end/tests_valid_in/test_024.in
@@ -1,10 +1,12 @@
-size  = 5000;
-steps = 2000;
+size  = 50;
+steps = 20;
 step  = 0;
 while (step < steps) {
+    arr = array(1);
     {
-        arr = repeat(5, size);
+        arr = repeat(step, size);
     }
+    print arr[0];
     step = step + 1;
 }
 print 1;
