--- a/tests/end_to_end/tests_valid_in/test_026.in
+++ b/tests/end_to_end/tests_valid_in/test_026.in
@@ -13,3 +13,6 @@ print sum;
 
 arr4 = array(repeat(array(repeat(array(1, 2, 3), 2), repeat(array(4, 5, 6), 2), repeat(array(7, 8, 9), 2)), 3));
 print arr4;
+
+x = -1;
+print x;
