add clearing arrays only in heap

--- a/tests/end_to_end/error/tests_error_in/test_052.in
+++ b/tests/end_to_end/error/tests_error_in/test_052.in
@@ -1,8 +1,8 @@
-size  = 50;
+size  = ?;
 steps = 20;
 step  = 0;
-arr = array(1);
 while (step < steps) {
+    arr = array(1);
     {
         arr = repeat(step, size);
     }
