--- a/tests/end_to_end/error/tests_error_in/test_052.in
+++ b/tests/end_to_end/error/tests_error_in/test_052.in
@@ -1,12 +1,4 @@
-size  = ?;
-steps = 20;
-step  = 0;
-while (step < steps) {
-    arr = array(1);
-    {
-        arr = repeat(step, size);
-    }
-    print arr[0];
-    step = step + 1;
-}
-print 1;
+arr2 = array(repeat(array(1000, 0, 0), 5));
+arr = array(1, 2, 3);
+arr2[?][0] = 0;
+print arr[arr2[2][0]];
