--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -4,7 +4,7 @@ project(unit)
 find_package(GTest REQUIRED)
 
 add_executable(unit_paracl paracl_unit_tests.cpp)
-target_link_libraries(unit_paracl gtest::gtest)
+target_link_libraries(unit_paracl PRIVATE gtest::gtest)
 
 set(RUN_TESTS ./unit_paracl --gtest_color=yes)
 add_test(
