add flex installation in workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,9 @@ jobs:
       - name: checkout repository
         uses: actions/checkout@v4
 
+      - name: install flex
+        run: sudo apt install flex libfl-dev
+
       - name: install uv
         uses: astral-sh/setup-uv@v5
 
@@ -55,6 +58,9 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
+
+      - name: install flex
+        run: sudo apt install flex libfl-dev
 
       - name: install uv
         uses: astral-sh/setup-uv@v5
