add cmake package

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,3 +29,28 @@ target_sources(paracl
     FILE_SET HEADERS
     BASE_DIRS ${INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
 )
+
+add_library(ParaCL
+    driver.cpp
+    ${BISON_parser_OUTPUTS}
+    ${FLEX_lexer_OUTPUTS}
+)
+target_include_directories(ParaCL PUBLIC
+    $<BUILD_INTERFACE:${INCLUDE_DIR}>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
+
+install(TARGETS ParaCL EXPORT ParaCLTargets
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION include
+)
+
+install(DIRECTORY ${INCLUDE_DIR}/ParaCL DESTINATION include)
+
+install(EXPORT ParaCLTargets
+    FILE ParaCLConfig.cmake
+    DESTINATION lib/cmake/ParaCL
+)
