--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,13 +8,13 @@ find_package(BISON REQUIRED)
 
 flex_target(lexer
     lexer.l
-    ${CMAKE_CURRENT_BINARY_DIR}/lexer.cpp
+    ${CMAKE_BINARY_DIR}/lexer.cpp
 )
 
 bison_target(parser
     parser.y
-    ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp
-    COMPILE_FLAGS "-Wcounterexamples --defines=${CMAKE_CURRENT_BINARY_DIR}/parser.tab.hh"
+    ${CMAKE_BINARY_DIR}/parser.cpp
+    COMPILE_FLAGS "-Wcounterexamples --defines=${CMAKE_BINARY_DIR}/parser.tab.hh"
 )
 
 add_flex_bison_dependency(lexer parser)
@@ -27,13 +27,17 @@ add_executable(paracl
 target_sources(paracl
     PRIVATE
     FILE_SET HEADERS
-    BASE_DIRS ${INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
+    BASE_DIRS ${INCLUDE_DIR} ${CMAKE_BINARY_DIR}
 )
 
-add_library(ParaCL driver.cpp)
+add_library(ParaCL
+    driver.cpp
+    ${BISON_parser_OUTPUTS}
+    ${FLEX_lexer_OUTPUTS}
+)
 target_include_directories(ParaCL PUBLIC
     $<BUILD_INTERFACE:${INCLUDE_DIR}>
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
     $<INSTALL_INTERFACE:include>
 )
 
