fix macro legth in parser.tab.hh

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,10 +14,20 @@ flex_target(lexer
 bison_target(parser
     parser.y
     ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp
-    COMPILE_FLAGS "-Wcounterexamples --defines=${CMAKE_CURRENT_BINARY_DIR}/ptab.h"
+    COMPILE_FLAGS "-Wcounterexamples --defines=${CMAKE_CURRENT_BINARY_DIR}/parser.tab.hh"
 )
 
 add_flex_bison_dependency(lexer parser)
+
+function(pre_build_modify_parser_header target_name)
+    add_custom_command(
+        TARGET ${target_name} PRE_BUILD
+        COMMAND sed -i -e "45s/.*/#ifndef YY_YY_PARACL_SRC_PARSER_TAB_HH/" ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.hh
+        COMMAND sed -i -e "46s/.*/#define YY_YY_PARACL_SRC_PARSER_TAB_HH/" ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.hh
+        COMMENT "Modifying parser.tab.hh for target ${target_name}"
+        DEPENDS ${BISON_parser_OUTPUTS}
+    )
+endfunction()
 
 add_executable(paracl
     driver.cpp
@@ -29,9 +39,16 @@ target_sources(paracl
     FILE_SET HEADERS
     BASE_DIRS ${INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
 )
+pre_build_modify_parser_header(paracl)
 
-add_library(ParaCL INTERFACE)
 
+add_library(ParaCL driver.cpp)
+pre_build_modify_parser_header(ParaCL)
+target_sources(ParaCL
+    PRIVATE
+    FILE_SET HEADERS
+    BASE_DIRS ${INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
+)
 target_include_directories(ParaCL INTERFACE
     $<BUILD_INTERFACE:${INCLUDE_DIR}>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
