--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: install flex
-        run: sudo apt install flex libfl-dev bison
+        run: sudo apt install flex libfl-dev
 
       - name: install uv
         uses: astral-sh/setup-uv@v5
@@ -60,7 +60,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: install flex
-        run: sudo apt install flex libfl-dev bison
+        run: sudo apt install flex libfl-dev
 
       - name: install uv
         uses: astral-sh/setup-uv@v5
