--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,6 +81,7 @@ jobs:
 
       - name: create conan package
         run: |
+          echo "CONAN_PACKAGE=true" >> $GITHUB_ENV
           conan create . --build=missing -s build_type=Release
           conan create . --build=missing -s build_type=Debug
 
