--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: CMake release config
         run: |
-          conan install . --build=missing -s compiler.cppstd=gnu20 -s build_type=Release
+          conan install . --build=missing -s build_type=Release
           cmake --preset release
           cmake --build build/Release
 
@@ -42,7 +42,7 @@ jobs:
 
       - name: CMake debug config
         run: |
-          conan install . --build=missing -s compiler.cppstd=gnu20 -s build_type=Debug
+          conan install . --build=missing -s build_type=Debug
           cmake --preset debug
           cmake --build build/Debug
 
