--- a/tests/end_to_end/valid/tests_valid_in/test_029.in
+++ b/tests/end_to_end/valid/tests_valid_in/test_029.in
@@ -17,7 +17,15 @@ num = {
 };
 print num;
 
-depth = {{{{{{{{{{{{ return array(repeat(array(1, 2, 3), 3)); };};};};};};};};};};};};
+depth = {
+    {
+        {
+            {
+                return 1;
+            }; return 0;
+        }; return 0;
+    }; return 0;
+};
 print depth;
 
 last_one = {
