--- a/tests/end_to_end/valid/tests_valid_in/test_031.in
+++ b/tests/end_to_end/valid/tests_valid_in/test_031.in
@@ -1,7 +1,7 @@
-foo_1 = func() { 0; };
-foo_2 = func() { 0; };
-foo_3 = func() { 0; };
-foo_4 = func() { 0; };
+foo_1 = func() { 0; }
+foo_2 = func() { 0; }
+foo_3 = func() { 0; }
+foo_4 = func() { 0; }
 
 print foo_1;
 print foo_2;
