--- a/tests/end_to_end/valid/tests_valid_in/test_035.in
+++ b/tests/end_to_end/valid/tests_valid_in/test_035.in
@@ -1,8 +1,8 @@
 is_even_ = func(n) : is_even {
-    is_odd = func(n) {
-        if (n == 0)
+    is_odd = func(x) {
+        if (x == 0)
             return 0;
-        return is_even(n - 1);
+        return is_even(x - 1);
     }
 
     if (n == 0)
@@ -18,7 +18,7 @@ print is_even(777);
 
 
 foo = func(n) : foo_ {
-    if (1)
+    if (n <= 1)
         return -1;
     return n * foo_(n - 1);
 }
